# IHP-ML-Models

./: .env.example  .gitignore  CHANGELOG.md  DEVELOPMENT.md  DEV_DEBUGGING.md  LICENSE  MULTI_ROOM_FEATURES.md  PROGRESS_26NOV.md  QUICKSTART.md  README.md  curl.rb  docker-compose.yml  pyproject.toml  repository.json
.devcontainer/: devcontainer.json  devcontainer_bootstrap
.github/: copilot-instructions.md
.github/workflows/: e2e-tests.yml.example
config/: adjacencies_room.json
ihp_ml_addon/: Dockerfile  build.yaml  config.yaml  requirements.txt
ihp_ml_addon/rootfs/app/: __init__.py
ihp_ml_addon/rootfs/app/application/: __init__.py
ihp_ml_addon/rootfs/app/application/services/: __init__.py  ml_application_service.py
ihp_ml_addon/rootfs/app/domain/: __init__.py
ihp_ml_addon/rootfs/app/domain/entities/: __init__.py  heating_state.py
ihp_ml_addon/rootfs/app/domain/interfaces/: __init__.py  experience_replay_buffer.py  ha_history_reader.py  ml_model_predictor.py  ml_model_trainer.py  model_storage.py  reward_calculator.py  rl_model_predictor.py  rl_model_trainer.py
ihp_ml_addon/rootfs/app/domain/services/: __init__.py  fake_data_generator.py  heating_prediction_service.py  heating_reward_calculator.py  rl_action_service.py  rl_episode_service.py
ihp_ml_addon/rootfs/app/domain/value_objects/: __init__.py  device_config.py  model_info.py  prediction_request.py  prediction_result.py  reward_config.py  rl_types.py  training_data.py
ihp_ml_addon/rootfs/app/infrastructure/: __init__.py
ihp_ml_addon/rootfs/app/infrastructure/adapters/: __init__.py  adjacency_config.py  file_model_storage.py  gymnasium_heating_env.py  ha_history_reader.py  memory_replay_buffer.py  sb3_rl_predictor.py  sb3_rl_trainer.py  xgboost_predictor.py  xgboost_trainer.py
ihp_ml_addon/rootfs/scripts/: run.sh
scripts/: README.md  clean.sh  develop.sh  run-e2e-tests.sh  run-integration-tests.sh  run-tests.sh  test-addon.sh  test-ha-connection.sh  test-train-device.sh  test-train-with-days.sh
tests/: __init__.py  conftest.py
tests/e2e/: README.md  __init__.py  conftest.py  test_ha_entity_formats.py  test_ha_history_reader_e2e.py
tests/integration/: README.md  __init__.py  conftest.py  test_api_endpoints.py
tests/unit/: __init__.py
tests/unit/domain/: test_fake_data_generator.py  test_heating_state.py  test_reward_calculator.py  test_rl_services.py  test_rl_value_objects.py  test_value_objects.py
tests/unit/infrastructure/: test_adjacency_config.py  test_ha_history_reader.py  test_memory_replay_buffer.py  test_multiroom_features.py  test_xgboost_integration.py
(+4 files in other folders)
